implement a python script to produce markdown given csv; change teasers' names

--- a/cat_papers.html
+++ b/cat_papers.html
@@ -318,7 +318,7 @@
                      <a href="http://www.cs.nthu.edu.tw/~rrlee/rrlee/Home.html">Ruen-Rone Lee</a>,
                      <a href="http://www0.cs.ucl.ac.uk/staff/n.mitra/">Niloy J. Mitra</a>
                      <br>
-                     In CVPR 2013
+                     In SIGGRAPH Asia 2013
                   </p>
                   <p class="content"><strong><a href="http://vecg.cs.ucl.ac.uk/Projects/SmartGeometry/halftone_QR/paper_docs/halftoneQR_sigga13.pdf">[Paper]</a></strong> <strong><a href="http://igl.ethz.ch/projects/winding-number/"></a></strong>
                      <strong><a href="http://vecg.cs.ucl.ac.uk/Projects/SmartGeometry/halftone_QR/halftoneQR_sigga13.html">[Project Page]</a></strong>
@@ -338,7 +338,6 @@
                      In CVPR 2013
                   </p>
                   <p class="content"><strong><a href="http://www.cs.berkeley.edu/~barron/KarschCVPR2013.pdf">[Paper]</a></strong>
-                     <strong><a href="http://igl.ethz.ch/projects/winding-number/"></a></strong>
                   </p>
             </tr>
          </tbody>
@@ -410,7 +409,7 @@
                      <img src="teasers/OvsjanikovTOG2012.jpg" border="1" height = "120" width="210">
                </td>
                <td width="20"></td>
-               <td width="680"><p class="content"><strong>Functional Maps: A Flexible Representation of Maps Between Shapes.</strong></p>
+               <td width="680"><p class="content"><strong>Functional Maps: A Flexible Representation of Maps Between Shapes</strong></p>
                <p class="content"><a href="http://www.lix.polytechnique.fr/~maks/">Maks Ovsjanikov</a>,
                <a href="http://mirela.net.technion.ac.il/">Mirela Ben-Chen</a>,
                <a href="http://people.csail.mit.edu/jsolomon/">Justin Solomon</a>,
@@ -584,7 +583,8 @@
                </td>
                <td width="20"></td>
                <td  width="680"><p class="content"><strong>Harmonic Skeleton for Realistic Character Animation</strong></p>
-               <p class="content"><a href="http://gregoire.aujay.free.fr/news.php">Gr&eacute;goire Aujay</a>, <a href="http://morpheo.inrialpes.fr/people/hetroy/">Franck Hetroy,</a> <a href="http://www.gipsa-lab.grenoble-inp.fr/~francis.lazarus/">Francis Lazarus</a>, Christine Depraz</p>
+               <p class="content"><a href="http://gregoire.aujay.free.fr/news.php">Gr&eacute;goire Aujay</a>, 
+               <a href="http://morpheo.inrialpes.fr/people/hetroy/">Franck Hetroy,</a> <a href="http://www.gipsa-lab.grenoble-inp.fr/~francis.lazarus/">Francis Lazarus</a>, Christine Depraz</p>
                <p class="content">In Symposium on Computer Animation (SCA) 2007</p>
                <p class="margin-small">&nbsp;</p>
                <p class="content"><strong><a href="http://www-evasion.imag.fr/Publications/2007/AHLD07/HarmonicSkeleton.pdf">[Paper] </a></strong><strong><a href="http://www-evasion.imag.fr/Publications/2007/AHLD07/">[Project Page]</a></strong></p></td>
@@ -647,7 +647,9 @@
                </p>
                <p class="content">In SIGGRAPH 2006</p>
                <p class="margin-small">&nbsp;</p>
-               <p class="content"><strong><a href="https://www.microsoft.com/en-us/research/publication/large-mesh-deformation-using-the-volumetric-graph-laplacian/">[Paper]</a></strong></p></td>
+               <p class="content"><strong><a href="http://graphics.cs.illinois.edu/sites/default/files/ssq.pdf">[Paper]</a></strong>, 
+               <strong><a href="http://graphics.cs.illinois.edu/papers/ssq">[Project]</a></strong>
+               </p></td>
             </tr>
          </tbody>
       </table>
