--- a/old/cat_papers.html
+++ b/old/cat_papers.html
@@ -130,16 +130,16 @@
       <p class="margin">&nbsp;</p>
 
 
-      <table border="0">
+      <table> 
          <tbody>
             <tr>
                <td><a href="http://graphics.cs.cmu.edu/projects/deepContext/"><img src="teasers/DoerschICCV2015.jpg" border="1" width="210"></a></td>
                <td width="20"></td>
                <td valign="middle" width="680">
                   <strong>Unsupervised Visual Representation Learning by Context Prediction</strong>
-                  <p class="content"><a href="http://www.cs.cmu.edu/~cdoersch/">Carl Doersch</a>, <a href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>, <a href="http://www.eecs.berkeley.edu/~efros/">Alexei A. Efros</a></p>
+                  <p class="content"><a href="http://www.cs.cmu.edu/~cdoersch/">Carl Doersch</a>, <a href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>, <a href="http://www.eecs.berkeley.edu/~efros/">Alexei A. Efros</a><br>
                   In ICCV 2015
-                  <p class="content"><strong><a href="http://arxiv.org/pdf/1505.05192v2">[Paper]</a></strong> <strong><a href="http://graphics.cs.cmu.edu/projects/deepContext/">[Project]</a></strong></p>
+                  <br><strong><a href="http://arxiv.org/pdf/1505.05192v2">[Paper]</a> <a href="http://graphics.cs.cmu.edu/projects/deepContext/">[Project]</a></strong></p>
             </tr>
          </tbody>
       </table>
