add eccv 2010 paper

--- a/web.html
+++ b/web.html
@@ -396,14 +396,14 @@ In SIGGRAPH 2012<br>
 <a href="http://research.google.com/archive/unsupervised_icml2012.html"><img src="teasers/Le2012.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Building High-level Features Using Large Scale Unsupervised Learning</strong>
-<p class="content"><a href="http://cs.stanford.edu/~quocle/">"Quoc Le</a>, 
+<p class="content"><a href="http://cs.stanford.edu/~quocle/">Quoc Le</a>, 
 <a href="http://www.cs.toronto.edu/~ranzato/">MarcAurelio Ranzato</a>, 
 <a href="http://research.google.com/pubs/RajatMonga.html">Rajat Monga</a>, 
 Matthieu Devin, 
 Kai Chen, 
 <a href="http://research.google.com/pubs/GregCorrado.html">Greg Corrado</a>, 
 <a href="http://research.google.com/people/jeff/">Jeff Dean</a>, 
-<a href="http://cs.stanford.edu/people/ang/"">Andrew Ng</a><br>
+<a href="http://cs.stanford.edu/people/ang/">Andrew Ng</a><br>
 In ICML 2012<br>
 <strong><a href="http://static.googleusercontent.com/media/research.google.com/en/us/archive/unsupervised_icml2012.pdf">[Paper]</a></strong> 
 <strong><a href="http://research.google.com/archive/unsupervised_icml2012.html">[Project]</a></strong>
@@ -542,6 +542,18 @@ In SIGGRAPH 2010<br>
 In SIGGRAPH 2010<br>
 <strong><a href="http://www.gmrv.es/Publications/2010/SPO10/SCTT.pdf">[Paper]</a></strong> 
 <strong><a href="http://www.gmrv.es/Publications/2010/SPO10/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
+<a href="http://kaiminghe.com/eccv10/index.html"><img src="teasers/He2010.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Guided Image Filtering</strong>
+<p class="content"><a href="http://kaiminghe.com/">Kaiming He</a>, 
+<a href="http://www.jiansun.org/">Jian Sun</a>, 
+https://www.ie.cuhk.edu.hk/people/xotang.shtml<br>
+In ECCV 2010<br>
+<strong><a href="http://kaiminghe.com/publications/eccv10guidedfilter.pdf">[Paper]</a></strong> 
+<strong><a href="http://kaiminghe.com/eccv10/index.html">[Project]</a></strong>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
