add eccv2010 paper

--- a/cat_papers.html
+++ b/cat_papers.html
@@ -550,7 +550,7 @@ In SIGGRAPH 2010<br>
 <td valign="middle" width="680"><strong>Guided Image Filtering</strong>
 <p class="content"><a href="http://kaiminghe.com/">Kaiming He</a>, 
 <a href="http://www.jiansun.org/">Jian Sun</a>, 
-https://www.ie.cuhk.edu.hk/people/xotang.shtml<br>
+<a href="https://www.ie.cuhk.edu.hk/people/xotang.shtml">Xiaoou Tang</a><br>
 In ECCV 2010<br>
 <strong><a href="http://kaiminghe.com/publications/eccv10guidedfilter.pdf">[Paper]</a></strong> 
 <strong><a href="http://kaiminghe.com/eccv10/index.html">[Project]</a></strong>
