--- a/cat_papers.html
+++ b/cat_papers.html
@@ -204,6 +204,17 @@ In CVPR 2015<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="http://arturodeza.github.io/virality/"><img src="teasers/Deza2015.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Understanding Image Virality</strong>
+<p class="content"><a href="http://arturodeza.wikidot.com/">Arturo Deza</a>, 
+<a href="https://filebox.ece.vt.edu/~parikh/">Devi Parikh</a><br>
+In CVPR 2015<br>
+<strong><a href="https://arxiv.org/abs/1503.02318">[Paper]</a></strong> 
+<strong><a href="http://arturodeza.github.io/virality/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://sites.google.com/site/marcolivesu/quadlayouts"><img src="teasers/Usai2015.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Extraction of the Quad Layout of a Triangle Mesh Guided by its Curve-Skeleton</strong>
@@ -451,7 +462,7 @@ In SIGGRAPH Asia 2011<br>
 <td valign="middle" width="680"><strong>Nonlinear Revision Control for Images</strong>
 <p class="content"><a href="http://www.ht-timchen.com/">Hsiang-Ting Chen</a>, 
 <a href="http://www.liyiwei.org/">Li-Yi Wei</a>, 
-<a href="https://cchang.wordpress.com/\n">Chun-Fa Chang</a><br>
+<a href="https://cchang.wordpress.com/\r\n">Chun-Fa Chang</a><br>
 In SIGGRAPH  2011<br>
 <strong><a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.465.986&rep=rep1&type=pdf">[Paper]</a></strong> 
 <strong><a href="https://www.microsoft.com/en-us/research/publication/nonlinear-revision-control-for-images/">[Project]</a></strong>
