--- a/cat_papers.html
+++ b/cat_papers.html
@@ -140,6 +140,19 @@ In SIGGRAPH 2016<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href=""><img src="teasers/Pathak2016.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Learning Features by Watching Objects Move</strong>
+<p class="content"><a href="https://people.eecs.berkeley.edu/~pathak/">Deepak Pathak</a>, 
+<a href="http://www.rossgirshick.info/">Ross Girshick</a>, 
+<a href="https://pdollar.github.io/">Piotr Dollar</a>, 
+<a href="https://people.eecs.berkeley.edu/~trevor/">Trevor Darrell</a>, 
+<a href="http://home.bharathh.info/">Bharath Hariharan</a><br>
+In Arxiv 2016<br>
+<strong><a href="https://arxiv.org/abs/1612.06370">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href=""><img src="teasers/Yan2015.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Physically-Accurate Fur Reflectance: Modeling, Measurement and Rendering</strong>
