--- a/cat_papers.html
+++ b/cat_papers.html
@@ -140,6 +140,19 @@ In SIGGRAPH 2016<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="https://github.com/akanazawa/catdeform"><img src="teasers/Kanazawa2016.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Learning 3D Deformation of Animals from 2D Images</strong>
+<p class="content"><a href="http://www.umiacs.umd.edu/~kanazawa/">Angjoo Kanazawa</a>, 
+<a href="https://services.math.duke.edu/~shaharko/">Shahar Kovalsky</a>, 
+<a href="http://www.wisdom.weizmann.ac.il/~/ronen/">Ronen Basri</a>, 
+<a href="https://www.cs.umd.edu/~djacobs/">David W. Jacobs</a><br>
+In Eurographics 2016<br>
+<strong><a href="https://arxiv.org/abs/1507.07646">[Paper]</a></strong> 
+<strong><a href="https://github.com/akanazawa/catdeform">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href=""><img src="teasers/Pathak2016.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Learning Features by Watching Objects Move</strong>
