add Isola et al 2016

--- a/cat_papers.html
+++ b/cat_papers.html
@@ -153,6 +153,19 @@ In Eurographics 2016<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="https://github.com/phillipi/pix2pix"><img src="teasers/Isola2016.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Image-to-Image Translation with Conditional Adversarial Networks</strong>
+<p class="content"><a href="https://github.com/phillipi">Phillip Isola</a>, 
+<a href="https://people.eecs.berkeley.edu/~junyanz/">Jun-Yan Zhu</a>, 
+<a href="https://people.eecs.berkeley.edu/~tinghuiz/">Tinghui Zhou</a>, 
+<a href="https://people.eecs.berkeley.edu/~efros/">Alexei A. Efros</a><br>
+In Arxiv 2016<br>
+<strong><a href="https://arxiv.org/abs/1611.07004">[Paper]</a></strong> 
+<strong><a href="https://github.com/phillipi/pix2pix">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href=""><img src="teasers/Pathak2016.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Learning Features by Watching Objects Move</strong>
