--- a/cat_papers.html
+++ b/cat_papers.html
@@ -140,6 +140,25 @@ In SIGGRAPH 2016<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="http://irc.cs.sdu.edu.cn/CFS/"><img src="teasers/Zhao2016.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Connected Fermat Spirals for Layered Fabrication</strong>
+<p class="content"><a href="http://irc.cs.sdu.edu.cn/~zhaohaisen/">Haisen Zhao</a>, 
+Fanglin Gu, 
+<a href="https://www.cs.utexas.edu/~huangqx/">Qixing Huang</a>, 
+J. A. Garcia Galicia, 
+Yong Chenhttp://www-bcf.usc.edu/~yongchen/, 
+<a href="http://www.cs.sdu.edu.cn/zh/~chtu">Changhe Tu</a>, 
+<a href="http://hpcg.purdue.edu/bbenes/index.htm">Bedrich Benes</a>, 
+<a href="http://www.cs.sfu.ca/~haoz/">Hao Zhang</a>, 
+<a href="http://www.cs.tau.ac.il/~dcor/">Daniel Cohen-Or</a>, 
+<a href="http://www.cs.sdu.edu.cn/~baoquan/">Baoquan Chen</a><br>
+In SIGGRAPH 2016<br>
+<strong><a href="http://irc.cs.sdu.edu.cn/~zhaohaisen/paper/fermat_spirals.pdf">[Paper]</a></strong> 
+<strong><a href="http://irc.cs.sdu.edu.cn/CFS/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://github.com/akanazawa/catdeform"><img src="teasers/Kanazawa2016.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Learning 3D Deformation of Animals from 2D Images</strong>
@@ -292,6 +311,25 @@ In SIGGRAPH 2014<br>
 In SIGGRAPH 2014<br>
 <strong><a href="http://www.eecs.berkeley.edu/~junyanz/projects/averageExplorer/averageExplorer.pdf">[Paper]</a></strong> 
 <strong><a href="http://www.eecs.berkeley.edu/~junyanz/projects/averageExplorer/index.html">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
+<a href="https://sites.google.com/site/build2last43dp/"><img src="teasers/Lu2014.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Build-to-Last: Strength to Weight 3D Printed Objects</strong>
+<p class="content"><a href="http://vr.sdu.edu.cn/~lulin/">Lin Lu</a>, 
+<a href="http://www.cs.bgu.ac.il/~asharf/">Andrei Sharf</a>, 
+<a href="http://irc.cs.sdu.edu.cn/~zhaohaisen/">Haisen Zhao</a>, 
+Yuan Wei, 
+Qingnan Fan, 
+Xuelin Chen, 
+<a href="http://www.animlife.com/">Yann Savoye</a>, 
+<a href="http://www.cs.sdu.edu.cn/zh/60">Changhe Tu</a>, 
+<a href="http://www.cs.tau.ac.il/~dcor/">Daniel Cohen-Or</a>, 
+<a href="http://www.cs.sdu.edu.cn/~baoquan/">Baoquan Chen</a><br>
+In SIGGRAPH 2014<br>
+<strong><a href="https://www.cs.tau.ac.il/~dcor/articles/2014/Build-to-Last.pdf">[Paper]</a></strong> 
+<strong><a href="https://sites.google.com/site/build2last43dp/">[Project]</a></strong>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
