add Warner and Guo 2017

--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,7 +129,17 @@
 <br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Campen2016.jpg"/ border=1 width=210></a></td>
+<a href="http://www.pgbovine.net/publications/CodePilot-collaborative-programming-IDE_CHI-2017.pdf"><img src="teasers/Warner2017.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>CodePilot: Scaffolding End-to-End Collaborative Software Development for Novice Programmers</strong>
+<p class="content"><a href="https://jeremywrnr.com/">Jeremy Warner</a>, 
+<a href="http://www.pgbovine.net/index.html">Philip J. Guo</a><br>
+In CHI 2017<br>
+<strong><a href="http://www.pgbovine.net/publications/CodePilot-collaborative-programming-IDE_CHI-2017.pdf">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
+<a href="https://www.graphics.rwth-aachen.de/media/papers/Campen2016_SimplicialFoliations.pdf"><img src="teasers/Campen2016.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Bijective Maps from Simplicial Foliations</strong>
 <p class="content"><a href="https://www.graphics.rwth-aachen.de/person/7/">Marcel Campen</a>, 
@@ -185,7 +195,7 @@ In Arxiv 2016<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Pathak2016.jpg"/ border=1 width=210></a></td>
+<a href="https://arxiv.org/abs/1612.06370"><img src="teasers/Pathak2016.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Learning Features by Watching Objects Move</strong>
 <p class="content"><a href="https://people.eecs.berkeley.edu/~pathak/">Deepak Pathak</a>, 
@@ -198,7 +208,7 @@ In Arxiv 2016<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Yan2015.jpg"/ border=1 width=210></a></td>
+<a href="http://people.eecs.berkeley.edu/~lingqi/publications/paper_fur.pdf"><img src="teasers/Yan2015.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Physically-Accurate Fur Reflectance: Modeling, Measurement and Rendering</strong>
 <p class="content"><a href="http://people.eecs.berkeley.edu/~lingqi/">Ling-Qi Yan</a>, 
@@ -223,7 +233,7 @@ In SIGGRAPH 2015<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Solomon2015.jpg"/ border=1 width=210></a></td>
+<a href="http://people.csail.mit.edu/jsolomon/assets/convolutional_w2.compressed.pdf"><img src="teasers/Solomon2015.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Convolutional Wasserstein Distances: Efficient Optimal Transportation on Geometric Domains</strong>
 <p class="content"><a href="http://people.csail.mit.edu/jsolomon/">Justin Solomon</a>, 
@@ -251,7 +261,7 @@ In ICCV 2015<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Long2015.jpg"/ border=1 width=210></a></td>
+<a href="http://people.eecs.berkeley.edu/~jonlong/long_shelhamer_fcn.pdf"><img src="teasers/Long2015.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Fully Convolutional Networks for Semantic Segmentation</strong>
 <p class="content"><a href="http://people.eecs.berkeley.edu/~jonlong/">Jon Long</a>, 
@@ -409,7 +419,7 @@ In SIGGRAPH 2013<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Caturana2013.jpg"/ border=1 width=210></a></td>
+<a href="http://www.oneweirdkerneltrick.com/catbasis.pdf"><img src="teasers/Caturana2013.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Cat Basis Purrsuit</strong>
 <p class="content"><a href="http://dimatura.net/">Daniel Caturana</a>, 
@@ -419,7 +429,7 @@ In SIGBOVIK 2013<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Karsch2013.jpg"/ border=1 width=210></a></td>
+<a href="http://www.cs.berkeley.edu/~barron/KarschCVPR2013.pdf"><img src="teasers/Karsch2013.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Boundary Cues for 3D Object Shape Recovery</strong>
 <p class="content"><a href="http://kevinkarsch.com/">Kevin Karsch</a>, 
@@ -456,7 +466,7 @@ In SIGGRAPH Asia 2012<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Chen2012.jpg"/ border=1 width=210></a></td>
+<a href="http://www.cs.sfu.ca/~pingtan/Papers/sigasia12.pdf"><img src="teasers/Chen2012.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Manifold Preserving Edit Propagation</strong>
 <p class="content"><a href="http://arts.buaa.edu.cn/staff/chen/index.htm">Xiaowu Chen</a>, 
@@ -468,7 +478,7 @@ In SIGGRAPH Asia 2012<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Ovsjanikov2012.jpg"/ border=1 width=210></a></td>
+<a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.717.3850&rep=rep1&type=pdf"><img src="teasers/Ovsjanikov2012.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Functional Maps: A Flexible Representation of Maps Between Shapes</strong>
 <p class="content"><a href="http://www.lix.polytechnique.fr/~maks/">Maks Ovsjanikov</a>, 
@@ -511,7 +521,7 @@ In CVPR 2012<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Dai2012.jpg"/ border=1 width=210></a></td>
+<a href="http://web.engr.illinois.edu/~dhoiem/publications/cvpr2012_objectsegmentation_qieyun.pdf"><img src="teasers/Dai2012.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Learning to Localize Detected Objects</strong>
 <p class="content"><a href="http://web.engr.illinois.edu/~dai9/">Qieyun Dai</a>, 
@@ -546,7 +556,7 @@ In SIGGRAPH  2011<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Kim2011.jpg"/ border=1 width=210></a></td>
+<a href="http://www.cs.princeton.edu/~funk/sig11.pdf"><img src="teasers/Kim2011.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Blended Intrinsic Maps</strong>
 <p class="content"><a href="http://vovakim.com/">Vladimir G. Kim</a>, 
@@ -746,7 +756,7 @@ In SIGGRAPH 2007<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Shi2007.jpg"/ border=1 width=210></a></td>
+<a href="http://citeseerx.ist.psu.edu/viewdoc/download;jsessionid=8E1AD9DB3F200954341D4C96A1F9C9E1?doi=10.1.1.152.7336&rep=rep1&type=pdf"><img src="teasers/Shi2007.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Mesh Puppetry: Cascading Optimization of Mesh Deformation with Inverse Kinematics</strong>
 <p class="content"><a href="https://sites.google.com/site/royitaqi/">Xiaohan Shi</a>, 
@@ -798,7 +808,7 @@ In SIGGRAPH 2006<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Zhang2006.jpg"/ border=1 width=210></a></td>
+<a href="http://www.math.rutgers.edu/~mischaik/papers/vecflddesn.pdf"><img src="teasers/Zhang2006.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Vector Field Design on Surfaces</strong>
 <p class="content"><a href="http://web.engr.oregonstate.edu/~zhange/">Eugene Zhang</a>, 
@@ -809,7 +819,7 @@ In ACM Transactions on Graphics (TOG) 2006<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Kharevych2006.jpg"/ border=1 width=210></a></td>
+<a href="http://www.cs.jhu.edu/~misha/Fall09/Kharevych06.pdf"><img src="teasers/Kharevych2006.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Discrete conformal mappings via circle patterns</strong>
 <p class="content">Liliya Kharevych, 
@@ -820,7 +830,7 @@ In ACM Transactions on Graphics 2006<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Zhou2005.jpg"/ border=1 width=210></a></td>
+<a href="https://www.microsoft.com/en-us/research/publication/large-mesh-deformation-using-the-volumetric-graph-laplacian/"><img src="teasers/Zhou2005.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Large mesh deformation using the volumetric graph Laplacian</strong>
 <p class="content"><a href="http://www.kunzhou.net/">Kun Zhou</a>, 
@@ -835,7 +845,7 @@ In SIGGRAPH 2005<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Zhou2005b.jpg"/ border=1 width=210></a></td>
+<a href="http://kunzhou.net/publications/texturemontage.pdf"><img src="teasers/Zhou2005b.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>TextureMontage: Seamless Texturing of Arbitrary Surfaces From Multiple Images</strong>
 <p class="content"><a href="http://www.kunzhou.net/">Kun Zhou</a>, 
@@ -886,7 +896,7 @@ In SIGGRAPH 2002<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Zhang2002.jpg"/ border=1 width=210></a></td>
+<a href="http://dl.acm.org/citation.cfm?id=566602"><img src="teasers/Zhang2002.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Feature-based light field morphing</strong>
 <p class="content">Zhunping Zhang, 
@@ -898,7 +908,7 @@ In SIGGRAPH 2002<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Tong2002.jpg"/ border=1 width=210></a></td>
+<a href="http://www.msr-waypoint.com/en-us/um/people/xtong/BTFSynthesis.pdf"><img src="teasers/Tong2002.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Synthesis of Bidirectional Texture Functions on Arbitrary Surfaces</strong>
 <p class="content"><a href="http://research.microsoft.com/en-us/um/people/xtong/xtong.html">Xin Tong</a>, 
@@ -912,7 +922,7 @@ In SIGGRAPH 2002<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Sheffer2002.jpg"/ border=1 width=210></a></td>
+<a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.101.2205&rep=rep1&type=pdf"><img src="teasers/Sheffer2002.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Smoothing an Overlay Grid to Minimize Linear Distortion in Texture Mapping</strong>
 <p class="content"><a href="http://www.cs.ubc.ca/~sheffa/">Alla Sheffer</a>, 
@@ -933,7 +943,7 @@ In SIGGRAPH 2001<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Lengyel2001.jpg"/ border=1 width=210></a></td>
+<a href="http://people.csail.mit.edu/ericchan/bib/pdf/p227-lengyel.pdf"><img src="teasers/Lengyel2001.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Real-Time Fur over Arbitrary Surfaces</strong>
 <p class="content">Jerome E. Lengyel, 
@@ -956,7 +966,7 @@ In SIGGRAPH 2001<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Geist1993.jpg"/ border=1 width=210></a></td>
+<a href="http://dl.acm.org/citation.cfm?id=151281"><img src="teasers/Geist1993.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>A Markovian framework for digital halftoning</strong>
 <p class="content"><a href="https://people.cs.clemson.edu/~geist/homepage.html">Robert Geist</a>, 
@@ -967,7 +977,7 @@ In ACM Transactions on Graphics (TOG) 1993<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href=""><img src="teasers/Attneave1954.jpg"/ border=1 width=210></a></td>
+<a href="http://web.mit.edu/persci/classes/papers/Attneave54.pdf"><img src="teasers/Attneave1954.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Some informational aspects of visual perception</strong>
 <p class="content"><a href="http://psycnet.apa.org/index.cfm?fa=buy.optionToBuy&id=1994-31267-001">Fred Attneave</a><br>
