add Warner2017 project page

--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,13 +129,14 @@
 <br>
 
 <table><tbody><tr><td>
-<a href="http://www.pgbovine.net/publications/CodePilot-collaborative-programming-IDE_CHI-2017.pdf"><img src="teasers/Warner2017.jpg"/ border=1 width=210></a></td>
+<a href="https://jeremywrnr.com/project/codepilot/"><img src="teasers/Warner2017.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>CodePilot: Scaffolding End-to-End Collaborative Software Development for Novice Programmers</strong>
 <p class="content"><a href="https://jeremywrnr.com/">Jeremy Warner</a>, 
 <a href="http://www.pgbovine.net/index.html">Philip J. Guo</a><br>
 In CHI 2017<br>
 <strong><a href="http://www.pgbovine.net/publications/CodePilot-collaborative-programming-IDE_CHI-2017.pdf">[Paper]</a></strong> 
+<strong><a href="https://jeremywrnr.com/project/codepilot/">[Project]</a></strong>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
