add Dumas2015, Wu2015, and Wu2016

--- a/cat_paper.html
+++ b/cat_paper.html
@@ -219,18 +219,6 @@ In Eurographics 2016<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href="https://arxiv.org/pdf/1608.04366.pdf"><img src="teasers/Wu2016.jpg"/ border=1 width=210></a></td>
-<td width="20"></td>
-<td valign="middle" width="680"><strong>Infill Optimization for Additive Manufacturing--Approaching Bone-like Porous Structures</strong>
-<p class="content"><a href="https://wwwcg.in.tum.de/group/persons/wu.html">Jun Wu</a>, 
-<a href="http://www.dtu.dk/english/service/phonebook/person?id=18078&tab=2&qt=dtupublicationquery">Niels Aage</a>, 
-<a href="https://wwwcg.in.tum.de/group/persons/westermann.html">R&#252diger Westermann</a>, 
-<a href="http://www.dtu.dk/english/service/phonebook/person?id=2278&tab=1">Ole Sigmund</a><br>
-In Arxiv 2016<br>
-<strong><a href="https://arxiv.org/pdf/1608.04366.pdf">[Paper]</a></strong> 
-</p></tr></tbody></table><br>
-
-<table><tbody><tr><td>
 <a href="https://arxiv.org/abs/1612.06370"><img src="teasers/Pathak2016.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Learning Features by Watching Objects Move</strong>
@@ -259,7 +247,7 @@ In SIGGRAPH Asia 2015<br>
 <a href="https://members.loria.fr/JDumas/publications/sfsyn/"><img src="teasers/Dumas2015.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>By-Example Synthesis of Structurally Sound Patterns</strong>
-<p class="content"><a href="https://members.loria.fr/JDumas/">J&#233r&#233mie Dumas</a>, 
+<p class="content"><a href="https://members.loria.fr/JDumas/">J\xc3\xa9r\xc3\xa9mie Dumas</a>, 
 An Lu, 
 <a href="http://www.antexel.com/sylefeb/research">Sylvain Lefebvre</a>, 
 <a href="https://wwwcg.in.tum.de/group/persons/wu.html">Jun Wu</a>, 
@@ -296,18 +284,6 @@ Tao Du,
 <a href="http://geometry.stanford.edu/member/guibas/">Leonidas Guibas</a><br>
 In SIGGRAPH 2015<br>
 <strong><a href="http://people.csail.mit.edu/jsolomon/assets/convolutional_w2.compressed.pdf">[Paper]</a></strong> 
-</p></tr></tbody></table><br>
-
-<table><tbody><tr><td>
-<a href="http://wwwcg.in.tum.de/research/research/publications/2015/high-resolution-topology-optimization.html"><img src="teasers/Wu2015.jpg"/ border=1 width=210></a></td>
-<td width="20"></td>
-<td valign="middle" width="680"><strong>A System for High-Resolution Topology Optimization</strong>
-<p class="content"><a href="https://wwwcg.in.tum.de/group/persons/wu.html">Jun Wu</a>, 
-<a href="https://wwwcg.in.tum.de/group/persons/dick.html">Christian Dick</a>, 
-<a href="https://wwwcg.in.tum.de/group/persons/westermann.html">R&#252diger Westermann</a><br>
-In IEEE Transactions on Visualization and Computer Graphics 2015<br>
-<strong><a href="http://wwwcg.in.tum.de/fileadmin/user_upload/Lehrstuehle/Lehrstuhl_XV/Research/Publications/2015/TopOpt/preprint.pdf">[Paper]</a></strong> 
-<strong><a href="http://wwwcg.in.tum.de/research/research/publications/2015/high-resolution-topology-optimization.html">[Project]</a></strong>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
