add two siggraph papers

--- a/cat_papers.html
+++ b/cat_papers.html
@@ -130,6 +130,31 @@
 <br>
 
 <table><tbody><tr><td>
+<a href="https://people.eecs.berkeley.edu/~lingqi/publications/paper_fur2.pdf"><img src="teasers/Yan2017.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>An Efficient and Practical Near and Far Field Fur Reflectance Model</strong>
+<p class="content"><a href="https://people.eecs.berkeley.edu/~lingqi/">Ling-Qi Yan</a>, 
+<a href="graphics.ucsd.edu/~henrik/">Henrik Wann Jensen</a>, 
+<a href="http://cseweb.ucsd.edu/~ravir/">Ravi Ramamoorthi</a><br>
+In SIGGRAPH 2017<br>
+<strong><a href="https://people.eecs.berkeley.edu/~lingqi/publications/paper_fur2.pdf">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
+<a href="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/SIG17/lfv/"><img src="teasers/Wang2017.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Light Field Video Capture Using a Learning-Based Hybrid Imaging System</strong>
+<p class="content"><a href="https://people.eecs.berkeley.edu/~tcwang0509/">Ting-Chun Wang</a>, 
+<a href="https://people.eecs.berkeley.edu/~junyanz/">Jun-Yan Zhu</a>, 
+<a href="http://nkhademi.com/">Nima Khademi Kalantari</a>, 
+<a href="https://people.eecs.berkeley.edu/~efros/">Alexei A. Efros</a>, 
+<a href="http://cseweb.ucsd.edu/~ravir/">Ravi Ramamoorthi</a><br>
+In SIGGRAPH 2017<br>
+<strong><a href="https://arxiv.org/abs/1705.02997">[Paper]</a></strong> 
+<strong><a href="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/SIG17/lfv/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://github.com/phillipi/pix2pix"><img src="teasers/Isola2017.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Image-to-Image Translation with Conditional Adversarial Networks</strong>
@@ -1051,7 +1076,7 @@ In Psychological Review 1954<br>
 <br>
 
       <br>
-      <p class="content">Last updated on July 2016. </p>
+      <p class="content">Last updated on Aug 2017. </p>
       <br>
       <div style="display:none">
          <!-- GoStats JavaScript Based Code -->
