--- a/cat_papers.html
+++ b/cat_papers.html
@@ -165,11 +165,11 @@ In SIGGRAPH 2017<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href="https://junyanz.github.io/CycleGAN/"><img src="teasers/Zhu2017.jpg"/ border=1 width=210></a></td>
+<a href="https://junyanz.github.io/CycleGAN/"><img src="teasers/Zhu*2017.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks</strong>
-<p class="content"><a href="http://people.eecs.berkeley.edu/~junyanz/">Jun-Yan Zhu</a>, 
-<a href="https://taesung.me/">Taesung Park</a>, 
+<p class="content"><a href="http://people.eecs.berkeley.edu/~junyanz/">Jun-Yan Zhu*</a>, 
+<a href="https://taesung.me/">Taesung Park*</a>, 
 <a href="http://people.eecs.berkeley.edu/~isola/">Phillip Isola</a>, 
 <a href="https://people.eecs.berkeley.edu/~efros/">Alexei A. Efros</a><br>
 In ICCV 2017<br>
