upgrade the code to python 3.x and automatically update the date

--- a/cat_papers.html
+++ b/cat_papers.html
@@ -1,7 +1,6 @@
 <html>
    <head>
       <title>Cat Paper Collection</title>
-      <link rel="shortcut icon" href="http://cg.cs.tsinghua.edu.cn/people/%7Exianying/favicon.ico">
       <style type="text/css">
          body {
          margin-top: 30px;
@@ -119,7 +118,7 @@
                <td width="900" >
                   <p class="content">As reported by Cisco,  90% of net traffic will be visual, and indeed, most of the visual data are cat photos and videos. Thus, understanding, modeling and synthesizing our feline friends becomes a more and more important research problem these days, especially for our cat lovers. </p>
                   <p class="content">&nbsp;</p>
-                  <p class="content"><em>Cat Paper Collection </em>is an academic paper collection that includes computer graphics, computer vision, machine learning and human-computer interaction papers that produce experimental results related to <strong>cats</strong>.  If you would like to add/remove a paper, please send an email to <strong><a href="http://www.eecs.berkeley.edu/~junyanz/">Jun-Yan Zhu</a></strong> (junyanz at berkeley dot edu). </p>
+                  <p class="content"><em>Cat Paper Collection </em>is an academic paper collection that includes computer graphics, computer vision, machine learning and human-computer interaction papers that produce experimental results related to <strong>cats</strong>.  If you would like to add/remove a paper, please send an email to <strong><a href="people.csail.mit.edu/junyanz/">Jun-Yan Zhu</a></strong> (junyanz at mit dot edu). </p>
                   <p class="content"><br> See also <strong><a href="https://github.com/junyanz/CatPapers">[GitHub]</a></strong> <strong> <a href ="https://github.com/junyanz/CatPapers/blob/master/data/reference.csv">[CSV file]</a></strong>
                   </p>
                </td>
@@ -649,7 +648,7 @@ In SIGGRAPH Asia 2011<br>
 <td valign="middle" width="680"><strong>Nonlinear Revision Control for Images</strong>
 <p class="content"><a href="http://www.ht-timchen.com/">Hsiang-Ting Chen</a>, 
 <a href="http://www.liyiwei.org/">Li-Yi Wei</a>, 
-<a href="https://cchang.wordpress.com/\r\n">Chun-Fa Chang</a><br>
+<a href="https://cchang.wordpress.com/\n">Chun-Fa Chang</a><br>
 In SIGGRAPH  2011<br>
 <strong><a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.465.986&rep=rep1&type=pdf">[Paper]</a></strong> 
 <strong><a href="https://www.microsoft.com/en-us/research/publication/nonlinear-revision-control-for-images/">[Project]</a></strong>
@@ -1088,9 +1087,9 @@ In Psychological Review 1954<br>
 
 <br>
 
-      <br>
-      <p class="content">Last updated on Aug 2017. </p>
-      <br>
+Last updated in Jun 2018
+<br>
+
       <div style="display:none">
          <!-- GoStats JavaScript Based Code -->
          <script type="text/javascript" src="http://gostats.com/js/counter.js"></script>
