--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,6 +129,23 @@
 <br>
 
 <table><tbody><tr><td>
+<a href="http://irc.cs.sdu.edu.cn/DSCarver/"><img src="teasers/Zhao2018.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>DSCarver: Decompose-and-Spiral-Carve for Subtractive Manufacturing</strong>
+<p class="content"><a href="http://irc.cs.sdu.edu.cn/~zhaohaisen/">Haisen Zhao</a>, 
+<a href="http://www.cs.sfu.ca/~haoz/">Hao Zhang</a>, 
+<a href="https://sites.google.com/site/xinshiqing/">Shiqing Xin</a>, 
+Yuanmin Deng, 
+Changhe Tu, 
+<a href="https://i.cs.hku.hk/~wenping/">Wenping Wang</a>, 
+<a href="http://www.cs.tau.ac.il/~dcor/">Daniel Cohen-Or</a>, 
+<a href="http://www.cs.sdu.edu.cn/~baoquan/">Baoquan Chen</a><br>
+In SIGGRAPH 2018<br>
+<strong><a href="http://irc.cs.sdu.edu.cn/DSCarver/files/DSCarver.pdf">[Paper]</a></strong> 
+<strong><a href="http://irc.cs.sdu.edu.cn/DSCarver/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://arxiv.org/abs/1704.03477"><img src="teasers/Ha2018.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>A Neural Representation of Sketch Drawings</strong>
@@ -1087,7 +1104,7 @@ In Psychological Review 1954<br>
 
 <br>
 
-Last updated in Jun 2018
+Last updated in Aug 2018
 <br>
 
       <div style="display:none">
