--- a/cat_papers.html
+++ b/cat_papers.html
@@ -146,6 +146,21 @@ In SIGGRAPH 2018<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="http://fve.bfa.edu.cn/recap/nbbs/"><img src="teasers/Aberman2018.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Neural Best-Buddies: Sparse Cross-Domain Correspondence</strong>
+<p class="content"><a href="https://kfiraberman.github.io/">Kfir Aberman</a>, 
+<a href="https://liaojing.github.io/html/">Jing Liao</a>, 
+<a href="https://rubbly.cn/">Mingyi Shi</a>, 
+<a href="http://www.cs.huji.ac.il/~danix/">Dani Lischinski</a>, 
+<a href="http://www.cs.sdu.edu.cn/~baoquan/">Baoquan Chen</a>, 
+<a href="https://www.cs.tau.ac.il/~dcor/">Daniel Cohen-Or</a><br>
+In SIGGRAPH 2018<br>
+<strong><a href="https://arxiv.org/abs/1805.04140">[Paper]</a></strong> 
+<strong><a href="http://fve.bfa.edu.cn/recap/nbbs/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://arxiv.org/abs/1704.03477"><img src="teasers/Ha2018.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>A Neural Representation of Sketch Drawings</strong>
