--- a/data/header.html
+++ b/data/header.html
@@ -116,10 +116,10 @@
          <tbody>
             <tr>
                <td width="900" >
-                  <p class="content">As reported by Cisco,  90% of net traffic will be visual, and indeed, most of the visual data are cat photos and videos. Thus, understanding, modeling and synthesizing our feline friends becomes a more and more important research problem these days, especially for our cat lovers. </p>
+                  <p class="content">As reported by Cisco,  90% of net traffic will be visual, and indeed, most of the visual data are cat photos and videos. Thus, understanding, modeling, and synthesizing our feline friends becomes a more and more critical research problem these days, especially for our cat lovers. </p>
                   <p class="content">&nbsp;</p>
-                  <p class="content"><em>Cat Paper Collection </em>is an academic paper collection that includes computer graphics, computer vision, machine learning and human-computer interaction papers that produce experimental results related to <strong>cats</strong>.  If you would like to add/remove a paper, please send an email to <strong><a href="people.csail.mit.edu/junyanz/">Jun-Yan Zhu</a></strong> (junyanz at mit dot edu). </p>
-                  <p class="content"><br> See also <strong><a href="https://github.com/junyanz/CatPapers">[GitHub]</a></strong> <strong> <a href ="https://github.com/junyanz/CatPapers/blob/master/data/reference.csv">[CSV file]</a></strong>
+                  <p class="content"><em>Cat Paper Collection </em>is an academic paper collection that includes computer graphics, computer vision, machine learning, and HCI papers that produce experimental results related to <strong>cats</strong>.  If you would like to add/remove an article, please send an email to <strong><a href="people.csail.mit.edu/junyanz/">Jun-Yan Zhu</a></strong> (junyanz at mit dot edu). </p>
+                  <p class="content"><br> See also <strong><a href="https://github.com/junyanz/CatPapers">GitHub</a></strong> | <strong> <a href ="https://github.com/junyanz/CatPapers/blob/master/data/reference.csv">CSV file</a></strong>
                   </p>
                </td>
             </tr>
