--- a/cat_papers.html
+++ b/cat_papers.html
@@ -116,10 +116,10 @@
          <tbody>
             <tr>
                <td width="900" >
-                  <p class="content">As reported by Cisco,  90% of net traffic will be visual, and indeed, most of the visual data are cat photos and videos. Thus, understanding, modeling and synthesizing our feline friends becomes a more and more important research problem these days, especially for our cat lovers. </p>
+                  <p class="content">As reported by Cisco,  90% of net traffic will be visual, and indeed, most of the visual data are cat photos and videos. Thus, understanding, modeling, and synthesizing our feline friends becomes a more and more critical research problem these days, especially for our cat lovers. </p>
                   <p class="content">&nbsp;</p>
-                  <p class="content"><em>Cat Paper Collection </em>is an academic paper collection that includes computer graphics, computer vision, machine learning and human-computer interaction papers that produce experimental results related to <strong>cats</strong>.  If you would like to add/remove a paper, please send an email to <strong><a href="people.csail.mit.edu/junyanz/">Jun-Yan Zhu</a></strong> (junyanz at mit dot edu). </p>
-                  <p class="content"><br> See also <strong><a href="https://github.com/junyanz/CatPapers">[GitHub]</a></strong> <strong> <a href ="https://github.com/junyanz/CatPapers/blob/master/data/reference.csv">[CSV file]</a></strong>
+                  <p class="content"><em>Cat Paper Collection </em>is an academic paper collection that includes computer graphics, computer vision, machine learning, and HCI papers that produce experimental results related to <strong>cats</strong>.  If you would like to add/remove an article, please send an email to <strong><a href="people.csail.mit.edu/junyanz/">Jun-Yan Zhu</a></strong> (junyanz at mit dot edu). </p>
+                  <p class="content"><br> See also <strong><a href="https://github.com/junyanz/CatPapers">GitHub</a></strong> | <strong> <a href ="https://github.com/junyanz/CatPapers/blob/master/data/reference.csv">CSV file</a></strong>
                   </p>
                </td>
             </tr>
@@ -851,6 +851,16 @@ In SIGGRAPH 2008<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="http://cis.jhu.edu/publications/papers_in_database/GEMAN/Fleuret-Geman_Cats_07.pdf"><img src="teasers/Fleuret2008.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Stationary Features and Cat Detection</strong>
+<p class="content"><a href="https://www.idiap.ch/~fleuret/">Fran&ccedilois Fleuret</a>, 
+<a href="http://www.cis.jhu.edu/people/faculty/geman/">Donald Geman</a><br>
+In JMLR 2008<br>
+<strong><a href="http://cis.jhu.edu/publications/papers_in_database/GEMAN/Fleuret-Geman_Cats_07.pdf">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="http://137.189.35.203/WebUI/CatDatabase/catData.html"><img src="teasers/Zhang2008.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Cat Head Detection - How to Effectively Exploit Shape and Texture Features</strong>
@@ -1119,7 +1129,7 @@ In Psychological Review 1954<br>
 
 <br>
 
-Last updated in Aug 2018
+Last updated in Sep 2018
 <br>
 
       <div style="display:none">
