--- a/cat_papers.html
+++ b/cat_papers.html
@@ -222,6 +222,19 @@ In CVPR 2017<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="https://arxiv.org/abs/1612.06370"><img src="teasers/Pathak2017.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Learning Features by Watching Objects Move</strong>
+<p class="content"><a href="https://people.eecs.berkeley.edu/~pathak/">Deepak Pathak</a>, 
+<a href="http://www.rossgirshick.info/">Ross Girshick</a>, 
+<a href="https://pdollar.github.io/">Piotr Dollar</a>, 
+<a href="https://people.eecs.berkeley.edu/~trevor/">Trevor Darrell</a>, 
+<a href="http://home.bharathh.info/">Bharath Hariharan</a><br>
+In CVPR 2017<br>
+<strong><a href="https://arxiv.org/abs/1612.06370">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://jeremywrnr.com/project/codepilot/"><img src="teasers/Warner2017.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>CodePilot: Scaffolding End-to-End Collaborative Software Development for Novice Programmers</strong>
@@ -297,19 +310,6 @@ In Eurographics 2016<br>
 <a href="http://www.dtu.dk/english/service/phonebook/person?id=2278&tab=1">Ole Sigmund</a><br>
 In Arxiv 2016<br>
 <strong><a href="https://arxiv.org/pdf/1608.04366.pdf">[Paper]</a></strong> 
-</p></tr></tbody></table><br>
-
-<table><tbody><tr><td>
-<a href="https://arxiv.org/abs/1612.06370"><img src="teasers/Pathak2016.jpg"/ border=1 width=210></a></td>
-<td width="20"></td>
-<td valign="middle" width="680"><strong>Learning Features by Watching Objects Move</strong>
-<p class="content"><a href="https://people.eecs.berkeley.edu/~pathak/">Deepak Pathak</a>, 
-<a href="http://www.rossgirshick.info/">Ross Girshick</a>, 
-<a href="https://pdollar.github.io/">Piotr Dollar</a>, 
-<a href="https://people.eecs.berkeley.edu/~trevor/">Trevor Darrell</a>, 
-<a href="http://home.bharathh.info/">Bharath Hariharan</a><br>
-In Arxiv 2016<br>
-<strong><a href="https://arxiv.org/abs/1612.06370">[Paper]</a></strong> 
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
@@ -400,6 +400,19 @@ In ICCV 2015<br>
 <a href="http://people.eecs.berkeley.edu/~trevor/">Trevor Darrell</a><br>
 In CVPR 2015<br>
 <strong><a href="http://people.eecs.berkeley.edu/~jonlong/long_shelhamer_fcn.pdf">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
+<a href="http://visual.cs.ucl.ac.uk/pubs/ccca/"><img src="teasers/Turmukhambetov2015.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Modeling Object Appearance using Context-Conditioned Component Analysis</strong>
+<p class="content"><a href="http://www.cs.ucl.ac.uk/staff/dturmukh/">Daniyar Turmukhambetov</a>, 
+<a href="http://cs.bath.ac.uk/~nc537/">Neill D.F. Campbell</a>, 
+<a href="http://www.cs.ucl.ac.uk/staff/s.prince/">Simon J.D. Prince</a>, 
+<a href="http://www.cs.ucl.ac.uk/staff/s.prince/">Jan Kautz</a><br>
+In CVPR 2015<br>
+<strong><a href="https://www.cv-foundation.org/openaccess/content_cvpr_2015/papers/Turmukhambetov_Modeling_Object_Appearance_2015_CVPR_paper.pdf">[Paper]</a></strong> 
+<strong><a href="http://visual.cs.ucl.ac.uk/pubs/ccca/">[Project]</a></strong>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
