--- a/cat_papers.html
+++ b/cat_papers.html
@@ -161,6 +161,18 @@ In SIGGRAPH 2018<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="https://people.csail.mit.edu/jsolomon/assets/curve_fmaps.pdf"><img src="teasers/Gehre2018.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Interactive Curve Constrained Functional Maps</strong>
+<p class="content"><a href="https://www.graphics.rwth-aachen.de/person/33/">Anne Gehre</a>, 
+<a href="https://www.radcliffe.harvard.edu/people/michael-bronstein">Michael Bronstein</a>, 
+<a href="https://www.graphics.rwth-aachen.de/person/3/">Leif Kobbelt</a>, 
+<a href="http://people.csail.mit.edu/jsolomon/">Justin Solomon</a><br>
+In SGP 2018<br>
+<strong><a href="https://people.csail.mit.edu/jsolomon/assets/curve_fmaps.pdf">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://arxiv.org/abs/1704.03477"><img src="teasers/Ha2018.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>A Neural Representation of Sketch Drawings</strong>
